* Add location to your transactions
* Filter multiple months & categories
* Migrate to workmanager for background tasks
* Update dependencies