@@ -1,4 +1,6 @@
 * Add location to your transactions
 * Filter multiple months & categories
 * Migrate to workmanager for background tasks
+* Some UI updates
+* Code updates & refactors
 * Update dependencies
